# hello-gtk-python

./: .gitignore  README.md  check-deps.py  com.example.HelloGtkPython.json  meson.build  pyproject.toml  rename.py
data/: com.example.HelloGtkPython.desktop.in  com.example.HelloGtkPython.gschema.xml  com.example.HelloGtkPython.metainfo.xml.in  gschemas.compiled  meson.build
data/icons/: meson.build
po/: POTFILES  es.po  hello-gtk-python.pot  meson.build
src/: application.py  hello-gtk-python.gresource.xml  hello-gtk-python.in  main.py  meson.build  window.blp  window.py
