install_data(
  'scalable' / 'apps' / 'com.example.HelloGtkPython.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'apps',
)

install_data(
  'symbolic' / 'apps' / 'com.example.HelloGtkPython-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'symbolic' / 'apps',
)
